correct background color

--- a/TestProject6/styles.css
+++ b/TestProject6/styles.css
@@ -159,7 +159,7 @@ body {
 }
 
 .grade-header:hover {
-    background-background-color: #e0e0e0;
+    background-color: #e0e0e0;
 }
 
 .grade-header h4 {
